# OpenGLDemo

./: .gitignore  CMakeLists.txt  interface.cpp  main.cpp  primitives.cpp  simpletext.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  vcpkg.json
app/: interface.hpp
app/extensions/: fractals.hpp  polygons.hpp
app/primitives/: 2dshapes.hpp  curvensmooth.hpp  legacy.hpp  triangulation.hpp  vlines.hpp
app/textrenderer/: textrenderer.cpp  textrenderer.hpp
glad/: glad.c
glad/include/glad/: glad.h
shaders/: point.vert
